[音视频demo wys 2020-5-13] 权限申请Bug修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.SoundActivity"/>
+        <activity android:name=".ui.SimplePlayerActivity"/>
     </application>
 
 </manifest>
