[音视频demo wys 2020-5-14] opengl渲染简单三角形

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".ui.SoundActivity"/>
         <activity android:name=".ui.SimplePlayerActivity"/>
+        <activity android:name=".ui.SimpleRenderActivity"/>
     </application>
 
 </manifest>
