[音视频demo wys 2020-6-4] opengl渲染视频

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.SoundActivity"/>
         <activity android:name=".ui.SimplePlayerActivity"/>
         <activity android:name=".ui.SimpleRenderActivity"/>
+        <activity android:name=".ui.OpenGLPlayerActivity"/>
     </application>
 
 </manifest>
