[音视频demo wys 2020-6-5] opengl渲染多个视频以及视频宽高适配

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.SimplePlayerActivity"/>
         <activity android:name=".ui.SimpleRenderActivity"/>
         <activity android:name=".ui.OpenGLPlayerActivity"/>
+        <activity android:name=".ui.OpenGLPlayersActivity"/>
     </application>
 
 </manifest>
