--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.SimpleRenderActivity"/>
         <activity android:name=".ui.OpenGLPlayerActivity"/>
         <activity android:name=".ui.OpenGLPlayersActivity"/>
+        <activity android:name=".ui.EGLPlayerActivity"/>
     </application>
 
 </manifest>
