[wys 6.9] FBO实现灵魂出窍效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.OpenGLPlayerActivity"/>
         <activity android:name=".ui.OpenGLPlayersActivity"/>
         <activity android:name=".ui.EGLPlayerActivity"/>
+        <activity android:name=".ui.FBOPlayerActivity"/>
     </application>
 
 </manifest>
