[音视频demo wys 2020-6-10] 视频硬编码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.OpenGLPlayersActivity"/>
         <activity android:name=".ui.EGLPlayerActivity"/>
         <activity android:name=".ui.FBOPlayerActivity"/>
+        <activity android:name=".ui.SynthesizerActivity"/>
     </application>
 
 </manifest>
